# swarm_robot_formation

./: CMakeLists.txt  README.md  package.xml
include/formation/discussion/: desirepositioninfo.h  heartbeatinfo.h
launch/: discussion.launch  discussion2.launch  discussion3.launch  formation.launch
msg/: ChatContent.msg
src/: desirepositioninfo.cpp  desirepositioninfo.h  formation_node.cpp  heartbeatinfo.cpp  heartbeatinfo.h  leader_reference.cpp  leader_reference.h  none_leader_discussion.cpp
src/discussion/: desirepositioninfo.cpp  heartbeatinfo.cpp
src/reference/: leader_reference.cpp
srv/: PositionRequest.srv
