<package>
    <name>formation</name>
    <version>1.0.0</version>
    <description>

        This package provides implementations of the formation in swarm robots.

    </description>
    <author>LiGao</author>
    <maintainer email="lg16@qq.com">LiGao</maintainer>
    <license>BSD</license>

    <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>pcl_conversions</build_depend>
    <build_depend>pcl_ros</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>roslaunch</build_depend>
    <build_depend>actionlib</build_depend>

    <run_depend>std_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>rospy</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>pcl_ros</run_depend>
    <run_depend>eigen</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>move_base</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>roslaunch</run_depend>
    <run_depend>message_generation</run_depend>
</package>
